--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               Фритрек и нулевой спринт: Подготовка к работе
             </h2>
             <div class="accent-image__card">
-              <img class="card-image" src="./images/image.png" alt="" />
+              <img class="card-image" src="./images/image.png" alt="Оригинальная картинка фургона" />
               <span class="accent__image">&lt;/HTML&gt;</span>
             </div>
             <p class="card-text first-pharagraph">
@@ -82,7 +82,7 @@
               <img
                 class="card-image card-image__min-contrast"
                 src="./images/image.png"
-                alt=""
+                alt="Картинка фургона с контрастом на минимуме"
               />
               <span class="accent__image">&lt;/HTML&gt;</span>
             </div>
@@ -139,7 +139,7 @@
               <img
                 class="card-image card-image__max-contrast"
                 src="./images/image.png"
-                alt=""
+                alt="Картинка фургона с контрастом на максимум"
               />
               <span class="accent__image">&lt;CSS&gt;</span>
             </div>
@@ -194,7 +194,7 @@
               <img
                 class="card-image card-image__pink"
                 src="./images/image.png"
-                alt=""
+                alt="Картинка йургона с розовым фильтром"
               />
               <span class="accent__image">&lt;desigions&gt;</span>
             </div>
@@ -251,7 +251,7 @@
               <img
                 class="card-image card-image__invert"
                 src="./images/image.png"
-                alt=""
+                alt="Картинка фургона с инверсией"
               />
               <span class="accent__image">care</span>
             </div>
@@ -309,7 +309,7 @@
               <img
                 class="card-image card-image__sepia"
                 src="./images/image.png"
-                alt=""
+                alt="Картинка фургона с фильтром сепия"
               />
               <span class="accent__image">&lt;support&gt;</span>
             </div>
@@ -364,7 +364,7 @@
               <img
                 class="card-image card-image__blur"
                 src="./images/image.png"
-                alt=""
+                alt="Картинка фургона с размытием"
               />
               <span class="accent__image">&lt;lifes-style: none;&gt;</span>
             </div>
@@ -421,7 +421,7 @@
               <img
                 class="card-image card-image__blur-sepia"
                 src="./images/image.png"
-                alt=""
+                alt="Картинка фургона с размытием и фильтром сепия"
               />
               <span class="accent__image">&lt;experience&gt;</span>
             </div>
